objects/Job_Applications__c.object
<CustomObject>
    <fields>
        <fullName>Application_Status__c</fullName>
        <defaultValue>&quot;Pending Review&quot;</defaultValue>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Call to schedule interview</fullName>
                </value>
                <value>
                    <fullName>Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Create_Job_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Job Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Applied__c</fullName>
        <label>Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <label>Jobs</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Job_Resource__c</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Candidate__c</columns>
        <columns>Interview_Date__c</columns>
        <columns>Jobs__c</columns>
        <columns>Notes__c</columns>
        <columns>NAME</columns>
        <columns>Create_Job_Offer__c</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>